[project]
name = "neo4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "groq>=0.32.0",
    "langchain>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-huggingface>=1.0.0",
    "langsmith>=0.4.37",
    "neo4j>=5.15.0",
    "networkx==3.1",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
    "pyvis==0.3.1",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
    "langserve>=0.0.30",
    "uvicorn>=0.23.2",
    "sse-starlette>=1.6.5"
]
